<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_infor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/iphonexui" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/start_iphone_x_ui"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/sw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:layout_weight="1"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:tint="@color/second_text"
                        app:srcCompat="@drawable/ic_sms_failed_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_vertical"
                        android:text="@string/if_it_s_your_first_run_permit_drawing_over_apps"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/second_text" />

            <LinearLayout
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/ph_n_h_i_amp_g_p"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:tint="@color/second_text"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_vertical"
                        android:text="@string/m_i_th_c_m_c_amp_g_p_vui_l_ng_g_i_v_h_m_th_duongkk_dev_gmail_com"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/second_text" />

            <LinearLayout
                android:id="@+id/ll_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/nh_gi_ng_d_ng_5"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:tint="@color/second_text"
                        app:srcCompat="@drawable/ic_star_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/g_i_t_ng_l_p_tr_nh_vi_n_1_t_ch_cafe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/second_text" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id2">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>